# 02501_AttentionSurgeon

./: .gitignore  NONAME_28330209.out  README.md  coco_standard_28327724.err  coco_standard_28327724.out  data  environment.yml  gpu_28329163.err  gpu_28329163.out  gpu_28329196.err  gpu_28329196.out  gpu_28329423.err  gpu_28329423.out  gpu_28330211.err  gpu_28330211.out  pyproject.toml  run_prune_base.sh  run_pruning_agent_28308637.out  submit_rl_agent_eval.sh  visualize.sh
.github/workflows/: ci.yml
checkpoints/: ade20k_head.pth  probe_imagenet.pt  rl_agent_ppo.pt  rl_agent_ppo_ade20k.pt  rl_agent_ppo_coco.pt  rl_agent_ppo_imagenet.pt
jobs/: run_baseline_pruning.sh  run_census.sh  run_plots.sh  run_pruning_agent.sh  run_visualize_plots.sh  train_cls.sh
notebooks/: mads_fuckaroundary.ipynb
npz_weights/: head_profiles_det.npz  head_profiles_object_detection.npz  head_profiles_segmentation.npz
npz_weights/old/: head_profiles_cls.npz  head_profiles_object_detection.npz  head_profiles_seg.npz
results/: baseline_pruning_ade20k_results.npz  baseline_pruning_cls_results.npz  baseline_pruning_coco_results.npz  baseline_pruning_imagenet_results.npz  final_mask_imagenet_PPOAgentStrategy.npz  head_profiles_cls.npz
src/: head_census.py  prune.py  prune_old.py  pruning_agent.py  run_baseline_pruning.py  run_census.py  train.py  visualize_heads.py  visualize_pruning.py
src/RLagent/: ppo_strategy.py  pruning_env.py  train_agent.py
src/baseline/: Train_classificationhead_28293212.out  backbone.py  data.py  head_census.py  imagenet_classification_head.pth  loaders.py  (+2 more)
(+4 files in other folders)
